# SwaraTone

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/audio_file/: CMakeLists.txt  channel.h
src/audio_file/mp3/: CMakeLists.txt  mp3.cpp  mp3.h
src/audio_file/wav/: CMakeLists.txt  wav_encoding.cpp  wav_encoding.h  wav_header_data.h
src/core/: CMakeLists.txt  argParser.cpp  argParser.h  coreLogic.cpp  coreLogic.h  sampleData.cpp  sampleData.h
src/features/: CMakeLists.txt  hpss.cpp  hpss.h  signalReconstruction.cpp  signalReconstruction.h  spectrum.cpp  spectrum.h
src/features/repet/: CMakeLists.txt  README.md  beat_soft_mask.cpp  beat_soft_mask.h  beat_spectrum.cpp  beat_spectrum.h  repeating_period.cpp  repeating_period.h  repet.cpp  repet.h
src/fft/: CMakeLists.txt  fft.cpp  fft.h  fft_helper.hpp  frequencyDomain.cpp  frequencyDomain.h  ifft.cpp  ifft.h  windowingFunctions.cpp  windowingFunctions.hpp  windowing_functions.cpp  windowing_functions.h  windowing_functions.hpp
src/helper/: CMakeLists.txt  constants.h  logging.cpp  logging.h
src/helper/bit/: CMakeLists.txt  bit_property.h  bit_reversal.cpp  bit_reversal.h  endian.cpp  endian.h
src/helper/filters/: CMakeLists.txt  highPass.cpp  highPass.h
src/helper/math/: CMakeLists.txt  matrix.cpp  matrix.hpp  powers.cpp  powers.h  powers.hpp  stats.h
src/mask/: CMakeLists.txt  hpssMask.cpp  hpssMask.hpp
src/mp3/: CMakeLists.txt  mp3.h
src/viz/: CMakeLists.txt  vizConstants.h
src/viz/colours/: CMakeLists.txt  colourFunctions.cpp  colourFunctions.h  colourMaps.h  magmaColourMap.h  plasmaColourMap.h  rgb.h
src/viz/graphs/: CMakeLists.txt  heatMapGraph.cpp  heatMapGraph.h  lineGraph.cpp  lineGraph.h  plot.cpp  plot.h
test/: CMakeLists.txt
test/fft/: CMakeLists.txt  fft_test.cpp  ifft_test.cpp
test/helper/: CMakeLists.txt  test_helper.cpp  test_helper.h
test/helper/bit/: CMakeLists.txt  bit_property_test.cpp  bit_reversal_test.cpp  endian_test.cpp
test/helper/math/: CMakeLists.txt  matrix_test.cpp  stats_argmax_test.cpp  stats_median_test.cpp
test/mask/: CMakeLists.txt  hpss_mask_test.cpp
